--- a/mario.html
+++ b/mario.html
@@ -1,22 +1,14 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
 <html>
 <head>
-    <style>
-        #pyramid {
-            font-family: "Courier New", monospace;
-            line-height: 0;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <h1>Mario 2</h1>
 <h3>Behold this wonderful pyramid:</h3>
 <div id="pyramid">
-    <!-- Our pyramid will go inside here -->
-<!--    <div id="construction">
-        <p>Uh oh! the pyramid is still under construction.</p>
-        <p>Check back again soon... our developers are hard at wrk as we speak!</p>
-    </div>-->
+
 </div>
 <script src="mario.js"></script>
 </body>
